# AAOS-recorder-app

./: README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/recorderapp/: AudioViewModel.kt  MainActivity.kt  MainScreen.kt
app/src/main/java/com/example/recorderapp/audio/: AudioEngine.kt  AudioPlayerManager.kt  AudioRecorderManager.kt
app/src/main/java/com/example/recorderapp/components/: ControlMenu.kt  DeleteConfirmationDialog.kt  GridRecordingItem.kt  PlayerControls.kt  RecordControls.kt  RecordingItem.kt
app/src/main/java/com/example/recorderapp/data/: AudioFileModel.kt
app/src/main/java/com/example/recorderapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
